--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="strawberry">Stroberi</string>
     <string name="plant_default">Tanaman Tidak Tersedia</string>
     <string name="GOOGLE_MAPS_API_KEY">AIzaSyBRWaAoGNlE31l_ExsSVfvVIubozwjsQx4</string>
+    <string name="status">Status</string>
 </resources>
