Changing image size

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="plant_default">Tanaman Tidak Tersedia</string>
     <string name="GOOGLE_MAPS_API_KEY">AIzaSyB6waTSeBSVOWz-L1leDAsHnCQ-3afW61A</string>
     <string name="status">Status</string>
-    <string name="bluetooth_tidak_terhubung">Bluetooth tidak terhubung</string>
+    <string name="bluetooth_tidak_terhubung">Device tidak terhubung!</string>
     <string name="hubungkan_sekarang">Hubungkan Sekarang</string>
 </resources>
